# EMailAuto

./: .dockerignore  .env.example  .gitignore  .replit  BETA_INSTALL.md  Dockerfile  PACKAGING.md  QUICK_START.md  README.md  SECURITY.md  SETUP_GUIDE.md  USER_MANUAL.md  create-beta-package.sh  docker-compose.yml  pyproject.toml  replit.md  requirements.txt
attached_assets/: Email Auto Actions_1761765022220.docx  Email Automation-Replit Spec-1-High level_1761677263862.docx  Triage matrix_1761760339696.docx
src/: ai_processor.py  app.py  database.py  email_service.py  encryption.py  test_email_connection.py
static/: app.js  style.css
templates/: index.html
